--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Compression with KMeans</title>
-    <link rel="stylesheet" href="/static/styles.css">
-</head>
-<body>
-    <h1>Image Compression using KMeans Clustering</h1>
-    
-    <form id="uploadForm" enctype="multipart/form-data">
-        <label for="file">Select an image:</label>
-        <input type="file" id="file" name="file" accept="image/*" required><br><br>
+    <link rel="stylesheet" href="/static/styles.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  </head>
+  <body>
+    <h1>KMeans Clustering Algorithm</h1>
 
-        <label for="n_colors">Number of colors:</label>
-        <input type="number" id="n_colors" name="n_colors" value="8" min="2" required><br><br>
+    <label for="text-input">Enter Number of Clusters:</label>
+    <input
+      type="text"
+      id="text-input"
+      placeholder="Please do an integer :)"
+      onchange="handleInputChange()"
+    />
 
-        <button type="submit">Compress Image</button>
-    </form>
-
-    <h2>Original and Compressed Images</h2>
-    <div id="imageContainer">
-        <img id="compressedImage" alt="Compressed Image" style="display:none;">
+    <div class="select-wrapper">
+      <div>initalization method:</div>
+      <select id="mySelect" class="custom-select">
+        <option value="random">Random</option>
+        <option value="ff">Farthest First</option>
+        <option value="kmeans">KMeans++</option>
+        <option value="manual">Manual</option>
+      </select>
     </div>
 
+    <button id="walk">Walk Through KMeans</button>
+
+    <button id="run_to">Run To Convergence</button>
+
+    <button id="gen_new">Generate New Dataset</button>
+
+    <button id="reset">Reset Algorithm</button>
+
+    <div id="graph-container">{{ graph_html|safe }}</div>
+
     <script src="/static/scripts.js"></script>
-</body>
+  </body>
 </html>
